Add Home page content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
 <meta charset="utf-8">
 <title>Home - STP Archery</title>
 </head>
-
 <body>
+  <header>
+    <section><img src="images/logo.jpg" alt="STP Archery Logo"></section>
+    <section>STP Archery</section>
+  </header>
+  <nav>
+    <ul>
+      <li>Home</li>
+      <li>Services</li>
+      <li>About</li>
+      <li>Instructors</li>
+    </ul>
+  </nav>
+  <article>
+   <section>
+   </section>
+   <section></section>
+   <section></section>
+  </article>
 </body>
 </html>
