--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Straight to the Point Archery</title>
-
+  <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
   <header>
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Instuctors</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="instructors.html">Instuctors</a></li>
       </ul>
     </nav>
   </header>
@@ -22,7 +22,7 @@
     <h2>Introduction</h2>
     <img src="images/students-competing.jpg" alt="students competing">
     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-    <p><a href="#">More >>></a></p>
+    <p><a href="about.html">More >>></a></p>
   </section>
   
   <section class="module">
