changes classes to classes and lessons

--- a/index.html
+++ b/index.html
@@ -26,20 +26,22 @@
   </section>
   
   <section class="module">
-    <h3>A101 Basic Archery</h3>
-    <p>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.</p>
+    <h3>Classes</h3>
+    <p>Lorem ipsum dolor amet cornhole tattooed four dollar toast, whatever mlkshk retro mustache. Hammock 8-bit offal photo booth tacos. Hella flannel williamsburg migas sustainable.</p>
   </section>
   
   <section class="module">
-    <h3>A102 Intermediate Archery</h3>
-    <p>A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.</p>
+    <h3>Private Lessons</h3>
+    <p>Sriracha coloring book wolf iceland paleo unicorn. Man braid tumblr gochujang, normcore sriracha meh readymade waistcoat. </p>
   </section>
   
+<!--
   <section class="module">
     <h3>AA103 Advanced Archery</h3>
     <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. </p>
   </section>
   
+-->
   <section class="policy">
     <h3>Nondiscriminatory Policy:</h3>
     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community. </p>
