--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <section><img src="images/logo.jpg" alt="STP Archery Logo"></section>
-    <section>STP Archery</section>
+    <h1>Straight to the Point Archery</h1>
   </header>
   <nav>
     <ul>
@@ -19,9 +19,25 @@
   </nav>
   <article>
    <section>
+     <h2>About STP Archery</h2>
+     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+     <p><a href="about.html">Learn more</a></p>
    </section>
-   <section></section>
-   <section></section>
+   <section>
+    <h2>Classes</h2>
+    <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+   </section>
+   <section>
+    <h2>Private Lessons</h2>
+    <p>One-on-one expert guidance by USA Archery certified coach.</p>
+   </section>
   </article>
+  <footer>
+   <section>
+     <h3>Nondiscriminatory Policy:</h3>
+     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community
+     </p>
+   </section>
+  </footer>
 </body>
 </html>
