--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
   <section class="module">
     <h3>Classes</h3>
     <p>Lorem ipsum dolor amet cornhole tattooed four dollar toast, whatever mlkshk retro mustache. Hammock 8-bit offal photo booth tacos. Hella flannel williamsburg migas sustainable.</p>
+    <p><a href="services.html">More Information >>></a></p>
+    
   </section>
   
   <section class="module">
     <h3>Private Lessons</h3>
     <p>Sriracha coloring book wolf iceland paleo unicorn. Man braid tumblr gochujang, normcore sriracha meh readymade waistcoat. </p>
+    <p><a href="services.html">More Information >>></a></p>
   </section>
   
 <!--
