added ids for classes and lessons to jump to specific sections on the services page

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
   
   <section class="module">
     <h3>Classes</h3>
-    <p>Lorem ipsum dolor amet cornhole tattooed four dollar toast, whatever mlkshk retro mustache. Hammock 8-bit offal photo booth tacos. Hella flannel williamsburg migas sustainable.</p>
-    <p><a href="services.html">More Information >>></a></p>
+    <p>Learn more about our latest Class offerings.</p>
+    <p><a href="services.html#classes">More Information >>></a></p>
     
   </section>
   
   <section class="module">
     <h3>Private Lessons</h3>
-    <p>Sriracha coloring book wolf iceland paleo unicorn. Man braid tumblr gochujang, normcore sriracha meh readymade waistcoat. </p>
-    <p><a href="services.html">More Information >>></a></p>
+    <p>Learn more about our latest Private Class offerings.</p>
+    <p><a href="services.html#lessons">More Information >>></a></p>
   </section>
   
 <!--
