--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
   <article>
     <h2>Services</h2>
     <h3>Classes</h3>
-    <section class="classes">
+    <section id="classes" class="classes">
         <img src="images/class1.jpg" alt="A101 Basic Archery">
         <h4>A101 Basic Archery</h4>
         <p><b>Name: </b>A101 Basic Archery</p>
@@ -53,7 +53,7 @@
       <p><b>Prerequisite: </b>A101/A102 or equivalent. Minimum age 7 years old.</p>
     </section>
     
-    <section class="lessons">
+    <section id="lessons" class="lessons">
       <img src="images/lesson1.jpg" alt="Lesson 1">
       <h3>Private Lessons</h3>
       <h4>Single Lesson</h4>
