--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
       <p><b>Prerequisite: </b>A101/A102 or equivalent. Minimum age 7 years old.</p>
     </section>
     
-    <section id="lessons" class="lessons">
+    <section  class="lessons">
       <img src="images/lesson1.jpg" alt="Lesson 1">
       <h3>Private Lessons</h3>
       <h4>Single Lesson</h4>
