--- a/about.html
+++ b/about.html
@@ -27,7 +27,17 @@
     <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
     <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
   </section>
-  
+  <footer>
+        <!-- footer with copyrite info & contact email -->
+        <nav class= "footer-nav">
+          <h4>Contact Us!</h4>
+          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+          <!-- Google Map -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          
+          <h5>&copy;STP Archery 2017. All rights reserved</h5>
+        </nav>
+  </footer>
 
 </body>
 
