--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p><a href="services.html#lessons">More Information >>></a></p>
   </section>
   
-<!--
+<!-- Removed class section and just made it Classes and Lessons
   <section class="module">
     <h3>AA103 Advanced Archery</h3>
     <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. </p>
@@ -49,6 +49,18 @@
     <h3>Nondiscriminatory Policy:</h3>
     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community. </p>
   </section>
+  
+  <footer>
+        <!-- footer with copyrite info & contact email -->
+        <nav class= "footer-nav">
+          <h4>Contact Us!</h4>
+          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+<!--          Google Map-->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          
+          <h5>&copy;STP Archery 2017. All rights reserved</h5>
+        </nav>
+  </footer>
 </body>
 
 </html>
