--- a/instructors.html
+++ b/instructors.html
@@ -37,7 +37,17 @@
       <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
     </section>
   </article>
-
+  <footer>
+        <!-- footer with copyrite info & contact email -->
+        <nav class= "footer-nav">
+          <h4>Contact Us!</h4>
+          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+          <!-- Google Map-->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          
+          <h5>&copy;STP Archery 2017. All rights reserved</h5>
+        </nav>
+  </footer>
 </body>
 
 </html>
