--- a/services.html
+++ b/services.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
-<!--
   <header>
     <img src="images/logo.jpg" alt="logo">
     <h1>Straight to the Point Archery</h1>
@@ -19,7 +18,6 @@
       </ul>
     </nav>
   </header>
--->
   <article>
     <h2>Services</h2>
     <h3>Classes</h3>
@@ -79,7 +77,17 @@
     </section>
     
   </article>
-
+  <footer>
+        <!-- footer with copyrite info & contact email -->
+        <nav class= "footer-nav">
+          <h4>Contact Us!</h4>
+          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+          <!-- Google Map-->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          
+          <h5>&copy;STP Archery 2017. All rights reserved</h5>
+        </nav>
+  </footer>
 </body>
 
 </html>
