add lang=en to pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Straight to the Point Archery</title>
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
     <h1>Straight to the Point Archery</h1>
     <nav>
