--- a/instructors.html
+++ b/instructors.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>STP Archery</title>
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
     <h1>Straight to the Point Archery</h1>
     <nav>
@@ -20,6 +21,7 @@
   </header>
   <article>
     <h2>Instructors</h2>
+    <!-- Class instructor section-->
     <section class="instructors">
       <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins">
       <h3>Derek Jenkins</h3>
