--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>STP Archery</title>
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
     <h1>Straight to the Point Archery</h1>
     <nav>
@@ -21,6 +22,7 @@
   <article>
     <h2>Services</h2>
     <h3>Classes</h3>
+    <!-- classes and Lessons section-->
     <section id="classes" class="classes">
         <img src="images/class1.jpg" alt="A101 Basic Archery">
         <h4>A101 Basic Archery</h4>
