--- a/instructors.html
+++ b/instructors.html
@@ -9,7 +9,7 @@
   <header>
     <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
-    <h1>Straight to the Point Archery</h1>
+    <h1>STP Archery</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,22 +21,22 @@
   </header>
   <article>
     <h2>Instructors</h2>
-    <!-- Class instructor section-->
+    <!-- Class instructor section Alan section-->
     <section class="instructors">
-      <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins">
+      <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins" class="coaches">
       <h3>Derek Jenkins</h3>
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
     </section>
     <section class="instructors">
-      <img src="images/amy-smith-instructor.jpg" alt="Amy Smith">
+      <img src="images/amy-smith-instructor.jpg" alt="Amy Smith" class="coaches">
       <h3>Amy Smith</h3>
       <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
     </section>
     
     <section class="instructors">
-      <img src="images/nathan-lee-instructor.jpg" alt="Nathan Lee">
+      <img src="images/nathan-lee-instructor.jpg" alt="Nathan Lee" class="coaches">
       <h3>Nathan Lee</h3>
-      <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
+      <p>Nathan is an USA Archery Certified Level 3 NTS &#150; Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
     </section>
   </article>
   <footer>
