--- a/about.html
+++ b/about.html
@@ -1,10 +1,57 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>About - STP Archery</title>
+  <meta charset="utf-8">
+  <title>Home - STP Archery</title>
 </head>
-
 <body>
+  <header>
+    <img src="images/logo.jpg" alt="STP Archery Logo">
+    <h1>Straight to the Point Archery</h1>
+  </header>
+  <!-- Will try sticky nav -->    
+  <nav class="sticky-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+    </ul>
+  </nav>
+  <main>
+    <!-- BEGIN Dax assigned working section -->        
+    <section class="about-module">
+       <h2>About Straight to the Point Archery</h2>        
+       <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+       <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
+       <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery.</p>
+       <p>Straight to the Point Archery has instructors that are qualified level 1 and level 2 instructors and have met the safety requirements of the USA Archery (USAA). We teach in a positive learning environment.  Our instructors also have extensive knowledge of the most advanced archery equipment and all forms of archery from the traditional long bow to the modern compound.  Straight to the Point Archery also has specific instructors for recreational archery, competitive archery and bow hunting.</p>
+       <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
+       <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
+    </section>
+    <section class="about-module">
+       <h2>About the Client</h2>
+       <p>Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and  started Straight to the Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the business has been booming ever since.</p>
+    </section>
+    <section class="about-module">
+       <h2>About the Users</h2>
+       <p>Giap tells you that people who use the site are mostly current and prospective students. They're interested in learning about the facilities and services available, as well as being reminded of the class schedule and location.</p>
+    </section>
+    <!-- END Dax assigned working section -->      
+    <section class="policy">
+       <h3>Nondiscriminatory Policy:</h3>
+       <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+    </section> 
+  </main>    
+  <footer>
+    <!-- footer with copyrite info & contact email -->
+    <nav class= "footer-nav">
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+      <!--Google Map-->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" allowfullscreen></iframe>
+      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+    </nav>
+  </footer>
 </body>
 </html>
