--- a/index.html
+++ b/index.html
@@ -1,43 +1,52 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Home - STP Archery</title>
+  <meta charset="utf-8">
+  <title>Home - STP Archery</title>
 </head>
 <body>
   <header>
-    <section><img src="images/logo.jpg" alt="STP Archery Logo"></section>
+    <img src="images/logo.jpg" alt="STP Archery Logo">
     <h1>Straight to the Point Archery</h1>
   </header>
-  <nav>
+  <!-- Will try sticky nav-->    
+  <nav class="sticky-nav">
     <ul>
-      <li>Home</li>
-      <li>Services</li>
-      <li>About</li>
-      <li>Instructors</li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
     </ul>
   </nav>
-  <article>
-   <section>
-     <h2>About STP Archery</h2>
-     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-     <p><a href="about.html">Learn more</a></p>
-   </section>
-   <section>
+  <section class="intro-head">
+    <img src="images/students-competing.jpg" alt="Students Competing">    
+    <h2>STP Archery</h2>
+    <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+  <section class="intro-module">
     <h2>Classes</h2>
     <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
-   </section>
-   <section>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+  <section  class="intro-module">
     <h2>Private Lessons</h2>
     <p>One-on-one expert guidance by USA Archery certified coach.</p>
-   </section>
-  </article>
+    <p><a href="about.html">Learn more</a></p>
+  </section>
+  <section class="policy">
+    <h3>Nondiscriminatory Policy:</h3>
+    <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+  </section> 
   <footer>
-   <section>
-     <h3>Nondiscriminatory Policy:</h3>
-     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community
-     </p>
-   </section>
+    <!-- footer with copyright info & contact email -->
+    <nav class= "footer-nav">
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+      <!--Google Map-->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" allowfullscreen></iframe>
+      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+    </nav>
   </footer>
 </body>
 </html>
