--- a/services.html
+++ b/services.html
@@ -1,10 +1,93 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Services - STP Archery</title>
+  <meta charset="utf-8">
+  <title>Home - STP Archery</title>
 </head>
-
 <body>
+  <header>
+    <img src="images/logo.jpg" alt="STP Archery Logo">
+    <h1>Straight to the Point Archery</h1>
+  </header>
+  <!-- Will try sticky nav-->    
+  <nav class="sticky-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+    </ul>
+  </nav>
+  <!-- BEGIN Dax assigned working section --> 
+  <main> 
+    <h2>Services</h2>
+ <!-- classes section-->  
+    <article id="classes">   
+      <h3>Classes</h3>
+      <section class="classes">
+        <img src="images/class1.jpg" alt="A101 Basic Archery">
+        <h4>A101 Basic Archery</h4>
+        <p><b>Name: </b>A101 Basic Archery</p>
+        <p><b>Description: </b>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.</p>
+        <p><b>Cost: </b>$120/month</p>
+        <p><b>Schedule: </b>Mondays and Wednesdays, 4-5pm</p>
+        <p><b>Prerequisite: </b>Interest in learning about the sport of archery. Minimum age  8 years old or 7 w/ pre-evaluation.</p>
+      </section>
+      <section class="classes">
+        <img src="images/class2.jpg" alt="A102 Intermediate Archery">
+        <h4>A102 Intermediate Archery</h4>
+        <p><b>Name: </b>A102 Intermediate Archeryy</p>
+        <p><b>Description: </b>A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class. Equipment will be provided with exception of safety kit. </p>
+       <p><b>Cost: </b>$120/month</p>
+        <p><b>Schedule: </b>Tuesdays and Thursdays, 4-5pm </p>
+        <p><b>Prerequisite: </b>A101 or recommendation from private lesson instructor. Minimum age 7 years old.</p>
+      </section>
+      <section class="classes">
+        <img src="images/students-competing.jpg" alt="A103 Advanced Archery">
+        <h4>A103 Advanced Archery</h4>
+        <p><b>Name: </b>A103 Advanced Archery</p>
+        <p><b>Description: </b>After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections. Equipment will be provided with exception of safety kit.</p>
+        <p><b>Cost: </b>$120/month</p>
+        <p><b>Schedule: </b>Tuesdays and Thursdays, 5-6pm </p>
+        <p><b>Prerequisite: </b>A101/A102 or equivalent. Minimum age 7 years old.</p>
+      </section>
+    </article>
+<!-- lessons section-->  
+    <article id="private">
+      <h3>Private Lessons</h3>  
+      <section class="lessons">
+        <img src="images/lesson1.jpg" alt="Lesson 1">
+        <h4>Single Lesson</h4>
+        <p><b>Type: </b>Single Lesson</p>
+        <p><b>Description: </b>1 hour of expert guidance by a USA Archery-certified coach</p>
+        <p><b>Cost: </b>$50</p>
+      </section>
+      <section class="lessons">
+        <img src="images/lesson2.jpg" alt="Lesson 2">
+        <h4>3 Lesson Package</h4>
+        <p><b>Type: </b>3 Lesson Package</p>
+        <p><b>Description: </b>3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach</p>
+        <p><b>Cost: </b>$140</p>
+      </section>
+      <section class="lessons">
+        <img src="images/lesson1.jpg" alt="Lesson 3">
+        <h4>10 Lesson Package</h4>
+        <p><b>Type: </b>10 Lesson Package</p>
+        <p><b>Description: </b>10 lessons, 1 hour each of expert guidance by a USA Archery-certified </p>
+        <p><b>Cost: </b>$380</p>
+      </section>
+    </article>   
+  </main>    
+  <!-- BEGIN Dax assigned working section --> 
+  <footer>
+    <!-- footer with copyrite info & contact email -->
+    <nav class= "footer-nav">
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+      <!--Google Map-->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" allowfullscreen></iframe>
+      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+    </nav>
+  </footer>
 </body>
 </html>
