Update page title

--- a/instructors.html
+++ b/instructors.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>STP Archery</title>
+  <title>Instructors - STP Archery</title>
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
