--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home - STP Archery</title>
+  <title>Services - STP Archery</title>
 </head>
 <body>
   <header>
