Remove css style

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
   </section> 
   <footer>
-    <!-- footer with copyright info & contact email -->
+    <!-- footer with copyrite info & contact email -->
     <nav class= "footer-nav">
       <h4>Contact Us!</h4>
       <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
