Update STP Archery Logo

--- a/instructors.html
+++ b/instructors.html
@@ -7,7 +7,7 @@
 <body>
   <header>
     <!-- Logo and navigation-->
-    <img src="images/logo.jpg" alt="logo">
+    <img src="images/logo.jpg" alt="STP Archery Logo">
     <h1>STP Archery</h1>
     <nav>
       <ul>
