Removed an error discovered by Validator

--- a/instructors.html
+++ b/instructors.html
@@ -37,7 +37,7 @@
     <section class="instructors">
       <img src="images/nathan-lee-instructor.jpg" alt="Nathan Lee" class="coaches">
       <h3>Nathan Lee</h3>
-      <p>Nathan is an USA Archery Certified Level 3 NTS &#150; Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
+      <p>Nathan is an USA Archery Certified Level 3 NTS Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
     </section>
   </article>
 
