--- a/style-guide.html
+++ b/style-guide.html
@@ -13,7 +13,7 @@
     <section class="typography">
         <h2>Typography</h2>
         <section class="head-style">
-          <h1>Heading 1</h1>
+          <p class="head1">Heading 1</p>
           <code>font-family: 'Montserrat', sans-serif; color: #94c840;</code> 
           <h2>Heading 2</h2>
           <code>font-family: 'Montserrat', sans-serif; color: #94c840;</code> 
