--- a/index.html
+++ b/index.html
@@ -2,51 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+
   <title>Home - STP Archery</title>
+      <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <img src="images/logo.jpg" alt="STP Archery Logo">
-    <h1>Straight to the Point Archery</h1>
-  </header>
-  <!-- Will try sticky nav-->    
-  <nav class="sticky-nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="instructors.html">Instructors</a></li>
-    </ul>
-  </nav>
-  <section class="intro-head">
+<section class="section group">
+    <div class="col span_4_of_4">
+        <header>
+            <img src="images/logo.jpg" alt="STP Archery Logo">
+            <h1>Straight to the Point Archery</h1>
+        </header>
+    </div>
+    </section>
+    <section class="section group">
+
+    <div class="col span_4_of_4"> 
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="instructors.html">Instructors</a></li>
+            </ul>
+        </nav>
+    </div>      
+</section>
+<section class="section group">    
+  <section class="col span_4_of_4">
     <img src="images/students-competing.jpg" alt="Students Competing">    
     <h2>STP Archery</h2>
     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
     <p><a href="about.html">Learn more</a></p>
   </section>
-  <section class="intro-module">
+    </section>
+    <section class="section group">  
+  <section class="col span_3_of_4">
     <h2>Classes</h2>
     <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
     <p><a href="about.html">Learn more</a></p>
   </section>
-  <section  class="intro-module">
+  <section  class="col span_1_of_4">
     <h2>Private Lessons</h2>
     <p>One-on-one expert guidance by USA Archery certified coach.</p>
     <p><a href="about.html">Learn more</a></p>
   </section>
-  <section class="policy">
+ <section class="section group">      
+  <section class="col span_4_of_4">
     <h3>Nondiscriminatory Policy:</h3>
     <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
   </section> 
+    </section>
+    </section>
   <footer>
     <!-- footer with copyright info & contact email -->
-    <nav class= "footer-nav">
       <h4>Contact Us!</h4>
       <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
-      <!--Google Map-->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" allowfullscreen></iframe>
-      <h5>&copy;STP Archery 2017. All rights reserved</h5>
-    </nav>
+       <h5>&copy;STP Archery 2017. All rights reserved</h5>
   </footer>
 </body>
 </html>
