--- a/style-guide.html
+++ b/style-guide.html
@@ -3,42 +3,62 @@
 <head>
   <meta charset="utf-8">
   <title>Style Guide</title>
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">       
+  <link rel="stylesheet" type="text/css" href="styles/styleguide.css">
+  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
 </head>
 <body>
 <article>
     <h1>Style Guide</h1>
-    <p>The following style guide must be used and maintained for STP Archery website.</p>  
-    <section class="typography">
-        <h2>Typography</h2>
-        <section class="head-style">
-          <h1>Heading 1</h1>
-          <code>font-family: 'Montserrat', sans-serif; color: #94c840;</code> 
-          <h2>Heading 2</h2>
-          <code>font-family: 'Montserrat', sans-serif; color: #94c840;</code> 
-          <h3>Heading 3</h3>
-          <code>font-family: 'Montserrat', sans-serif; color: #523e33;</code>
-          <p>Paragraph</p>
-          <code>font-family: 'Montserrat', sans-serif; color: #808080;</code>
-        </section>    
+    <p>The following style guide must be used and maintained for STP Archery website.</p>
+    <h2>Typography</h2>
+    <section class="section group">
+        <div class="col span_1_of_4">
+        1 of 4
+        </div>
+        <div class="col span_1_of_4">
+        1 of 4
+        </div>
+        <div class="col span_1_of_4">
+        1 of 4
+        </div>
+        <div class="col span_1_of_4">
+        1 of 4
+        </div>
     </section>
-    <section class="colors">
-        <h2>Color Palette</h2>
-        <div class="brown"></div>
-        <p><em>Brown: #523e33</em></p>            
-        <div class="brown-light"></div>
-        <p><em>Light Brown: #94877e</em></p>  
-        <div class="green"></div>       
-        <p><em>Green: #94c840</em></p>  
-        <div class="green-light"></div>          
-        <p><em>Light Green: #d6e8b8</em></p>  
-    </section>
-    <section class="buttons">
-        <h2>Buttons</h2>
-        <p>Default button style for STP Archery</p>    
-        <button class="btn-default">Default</button>
-        <button class="btn-hover">Hover</button>
+    <section class="section group">
+        <div class="col span_1_of_4 typography">
+            <h2>Typography</h2>
+            <section class="head-style">
+              <h1>Heading 1</h1>
+              <code>font-family: 'Cutive', serif; color: #94c840;</code> 
+              <h2>Heading 2</h2>
+              <code>font-family: 'Cutive', serif; color: #94c840;</code> 
+              <h3>Heading 3</h3>
+              <code>font-family: 'Cutive', serif; color: #523e33;</code>
+              <p>Paragraph</p>
+              <code>font-family: 'Cutive', serif; color: #808080;</code>
+            </section> 
+        </div>
+        <div class="col span_1_of_4 colors">
+            <h2>Color Palette</h2>
+            <div class="brown"></div>
+            <p><em>Brown: #523e33</em></p>            
+            <div class="brown-light"></div>
+            <p><em>Light Brown: #94877e</em></p>  
+            <div class="green"></div>       
+            <p><em>Green: #94c840</em></p>  
+            <div class="green-light"></div>          
+            <p><em>Light Green: #d6e8b8</em></p>  
+            </div>
+        <div class="col span_1_of_4 buttons">
+            <h2>Buttons</h2>
+            <p>Default button style for STP Archery</p>    
+            <button class="btn-default">Default</button>
+            <button class="btn-hover">Hover</button>
+            </div>
+        <div class="col span_1_of_4">
+            <h2>Imagery/Media</h2>
+        </div>
     </section>
 </article>
 <footer>
