Update styleguide page

--- a/style-guide.html
+++ b/style-guide.html
@@ -40,6 +40,14 @@
           <button class="btn-default">Default</button>
           <button class="btn-hover">Hover</button>
       </section>
+      <section class="buttons">
+          <h2>Imagery</h2>
+          <p>Imagery style guide placeholder</p>    
+      </section>
+      <section class="buttons">
+          <h2>Media</h2>
+          <p>Media style guide placeholder</p>    
+      </section>
   </article>
   <footer>
     <nav class= "footer-nav">
