--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Straight to the Point Archery</title>
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Slabo+27px" rel="stylesheet">
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
   <header>
     <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
-    <h1>Straight to the Point Archery</h1>
+    <h1 class=header>Straight to the Point Archery</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
