--- a/instructors.html
+++ b/instructors.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <header>
+    <!-- Logo and navigation-->
     <img src="images/logo.jpg" alt="logo">
     <h1>Straight to the Point Archery</h1>
     <nav>
