adding grid to stylesheet

--- a/instructors.html
+++ b/instructors.html
@@ -19,10 +19,10 @@
       </ul>
     </nav>
   </header>
-  <article>
+  <article >
     <h2>Instructors</h2>
     <!-- Class instructor section Alan section-->
-    <section class="instructors">
+    <section class="instructors span_2_of_4">
       <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins" class="coaches">
       <h3>Derek Jenkins</h3>
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
