--- a/instructors.html
+++ b/instructors.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>STP Archery</title>
+  <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" />
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
@@ -22,26 +24,29 @@
   <article >
     <h2>Instructors</h2>
     <!-- Class instructor section Alan section-->
-    <section class="instructors span_2_of_4">
-      <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins" class="coaches">
+    <section class="instructors span_1_of_4">
+      <img src="images/derek-jenkins-instructor2.jpg" alt="Derek Jenkins" class="coaches">
+    </section>
+    
+    <section class="instructors span_3_of_4">
       <h3>Derek Jenkins</h3>
       <p>Derek is a Washington native and an experienced outdoorsman with many years hunting, fishing, skiing, canoeing, archery, shooting and minimalistic camping. His skillful mastery of bushcraft and wilderness survival knowledge helps define his character. He enjoys handcrafting his own long bows, flint knapped primitive arrows and making custom leather products.</p>
     </section>
-    <section class="instructors">
+    <section class="instructors span_1_of_4">
       <img src="images/amy-smith-instructor.jpg" alt="Amy Smith" class="coaches">
       <h3>Amy Smith</h3>
       <p>Amy truly has a passion for archery. She comes from a long line of hunters, fisherman, and trappers of Canada. Amy  places a strong emphasis on safety and is enthusiastic about teaching. Amy also loves fitness, and  has been a YMCA group exercise and personal trainer for over 18 years.</p>
     </section>
     
-    <section class="instructors">
-      <img src="images/nathan-lee-instructor.jpg" alt="Nathan Lee" class="coaches">
+    <section class="instructors span_1_of_4">
+      <img src="images/nathan-lee-instructor2.jpg" alt="Nathan Lee" class="coaches">
       <h3>Nathan Lee</h3>
       <p>Nathan is an USA Archery Certified Level 3 NTS &#150; Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
     </section>
   </article>
   <footer>
         <!-- footer with copyrite info & contact email -->
-        <nav class= "footer-nav">
+        <nav class= "footer-nav span_4_of_4">
           <h4>Contact Us!</h4>
           <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
           <!-- Google Map-->
