--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p><a href="about.html"><button>Learn more</button></a></p>
     </section>
     <aside class="col span_1_of_4">
-        <h3>Archery Training Video</h3>
+        <h3>Archery Training/Competition Video</h3>
         <iframe width="270" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         <p>What not to do: <em>Archery training fail.</em></p>
     </aside>
