--- a/index.html
+++ b/index.html
@@ -3,71 +3,76 @@
 <head>
   <meta charset="utf-8">
   <title>Home - STP Archery</title>
-  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
-<section class="section group">
-  <div class="col span_4_of_4">
-    <header>
-      <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
-      <h1>Straight to the Point Archery</h1>
-    </header>
-  </div>
-</section>
-<nav class="nav">
-  <ul>
-    <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="instructors.html">Instructors</a></li>
-  </ul>
-</nav>
-<div class="section group">    
-  <section class="col span_4_of_4 img-container">
-    <div class="intro">    
-      <h2>Straight to the Point Archery</h2>
-      <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
-      <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+  <!-- Header/Logo Section -->
+  <section class="section group">
+    <div class="col span_4_of_4">
+      <header>
+        <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
+        <h1>Straight to the Point Archery</h1>
+      </header>
     </div>
   </section>
-</div>
-<div class="section group lessons">  
-  <section class="col span_2_of_4">
-    <h2>Classes</h2>
-    <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+  <!-- Nav Section -->
+  <nav class="nav">
     <ul>
-      <li>A101 Beginners</li>
-      <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
-      <li>A102 Intermediate</li>
-      <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
-      <li>A103 Advanced</li>
+      <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
     </ul>
-    <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
-  </section>
-  <section class="col span_1_of_4">
-    <h2>Private Lessons</h2>
-    <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
-    <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
-  </section>
-  <aside class="col span_1_of_4">
-    <h4>Training/Competition Video</h4>
-    <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-    <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
-  </aside>
-</div>
-<div class="section group">      
-  <section class="col span_4_of_4 policy">
-    <h3>Nondiscriminatory Policy:</h3>
-    <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
-  </section> 
-</div>
-<footer>
+  </nav>
+  <!-- Banner/Intro Section -->
+  <div class="section group">    
+    <section class="col span_4_of_4 img-container">
+      <div class="intro">    
+        <h2>Straight to the Point Archery</h2>
+        <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+        <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+      </div>
+    </section>
+  </div>
+  <!-- Content/Media Section -->
+  <div class="section group lessons">  
+    <section class="col span_2_of_4">
+      <h2>Classes</h2>
+      <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
+      <ul>
+        <li>A101 Beginners</li>
+        <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
+        <li>A102 Intermediate</li>
+        <li><i class="fa fa-long-arrow-right" aria-hidden="true"></i></li>
+        <li>A103 Advanced</li>
+      </ul>
+      <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+    </section>
+    <section class="col span_1_of_4">
+      <h2>Private Lessons</h2>
+      <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
+      <p><a href="about.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+    </section>
+    <aside class="col span_1_of_4">
+      <h4>Training/Competition Video</h4>
+      <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+      <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
+    </aside>
+  </div>
+  <!-- Policy Note, applies on all pages -->   
+  <div class="section group">  
+    <section class="col span_4_of_4 policy">
+      <h3>Nondiscriminatory Policy:</h3>
+      <p>Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.</p>
+    </section> 
+  </div>
   <!-- footer with copyright info & contact email -->
-    <h4>Contact Us!</h4>
-    <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
-    <h5>&copy;STP Archery 2017. All rights reserved</h5>
-</footer>
+  <footer>
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+  </footer>
 </body>
 </html>
