clean and update styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
-  <!-- Header/Logo Section -->
+  <!-- Header/Logo Section for all pages-->
   <section class="section group">
     <div class="col span_4_of_4">
       <header>
@@ -17,7 +17,7 @@
       </header>
     </div>
   </section>
-  <!-- Nav Section -->
+  <!-- Nav Section for all pages-->
   <nav class="nav">
     <ul>
       <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
@@ -26,7 +26,7 @@
       <li><a href="instructors.html">Instructors</a></li>
     </ul>
   </nav>
-  <!-- Banner/Intro Section -->
+  <!-- Banner/Intro Section this page only-->
   <div class="section group">    
     <section class="col span_4_of_4 img-container">
       <div class="intro">    
@@ -36,7 +36,7 @@
       </div>
     </section>
   </div>
-  <!-- Content/Media Section -->
+  <!-- Content/Media Section this page only -->
   <div class="section group lessons">  
     <section class="col span_2_of_4">
       <h2>Classes</h2>
@@ -61,7 +61,7 @@
       <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
     </aside>
   </div>
-  <!-- Policy Note, applies on all pages -->   
+  <!-- Policy Note, for all pages -->   
   <div class="section group">  
     <section class="col span_4_of_4 policy">
       <h3>Nondiscriminatory Policy:</h3>
