Tidies up some section classes

--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
          <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
          <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
       </section>
-      <section class="about-module">
+      <section class="col span_4_of_4">
          <h2>About the Client</h2>
          <p>Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and  started Straight to the Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the business has been booming ever since.</p>
       </section>
-      <section class="about-module">
+      <section class="col span_4_of_4">
          <h2>About the Users</h2>
          <p>Giap tells you that people who use the site are mostly current and prospective students. They're interested in learning about the facilities and services available, as well as being reminded of the class schedule and location.</p>
       </section>
