--- a/services.html
+++ b/services.html
@@ -2,24 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>STP Archery</title>
+  <title>Home - STP Archery</title>
+  <!-- STP Archery Logo within the header -->
   <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
-  <link rel="stylesheet" href="styles/stylesheet_services.css">
+  <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+  <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
-  <header>
-    <!-- Logo and navigation-->
-    <img src="images/logo.jpg" alt="logo">
-    <h1>Straight to the Point Archery</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="instructors.html">Instuctors</a></li>
-      </ul>
-    </nav>
-  </header>
+  <!-- Header/Logo Section for all pages-->
+  <section class="section group">
+    <div class="col span_4_of_4">
+      <header>
+        <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
+        <h1>Straight to the Point Archery</h1>
+      </header>
+    </div>
+  </section>
+  <!-- Nav Section for all pages-->
+  <nav class="nav">
+    <ul>
+      <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+    </ul>
+  </nav>
+
   
   <article>
     <h2>Services</h2>
@@ -27,7 +37,7 @@
     <!-- classes and Lessons section-->
     <section class="classes group">
         <div class="col span_1_of_3">
-          <img src="images/class2.jpg" alt="A101 Basic Archery">
+          <img src="images/class1.jpg" alt="A101 Basic Archery">
           <h4>A101 Basic Archery</h4>
           <p><b>Name: </b>A101 Basic Archery</p>
           <p><b>Description: </b>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.</p>
@@ -60,7 +70,7 @@
     <section class="classes group">
              
       <div class="col span_1_of_3">
-        <img src="images/lesson1.jpg" alt="Lesson 2">
+        <img src="images/lesson3.jpg" alt="Lesson 2">
         <h4>Single Lesson</h4>
         <p><b>Type: </b>Single Lesson</p>
         <p><b>Description: </b>1 hour of expert guidance by a USA Archery-certified coach</p>
@@ -76,7 +86,7 @@
       </div>
       
       <div class="col span_1_of_3">
-        <img src="images/lesson3.jpg" alt="Lesson 1">
+        <img src="images/lesson1.jpg" alt="Lesson 1">
         <h4>10 Lesson Package</h4>
         <p><b>Type: </b>10 Lesson Package</p>
         <p><b>Description: </b>10 lessons, 1 hour each of expert guidance by a USA Archery-certified </p>
