--- a/about.html
+++ b/about.html
@@ -2,23 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>STP Archery</title>
-  <link rel="stylesheet" href="styles/stylesheet.css">
+  <title>Home - STP Archery</title>
+  <!-- STP Archery Logo within the header -->
+  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
+  <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+  <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
+  <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 </head>
 <body>
-  <header>
-    <!-- Logo and navigation-->
-    <img src="images/logo.jpg" alt="logo">
-    <h1>Straight to the Point Archery</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="instructors.html">Instuctors</a></li>
-      </ul>
-    </nav>
-  </header>
+  <!-- Header/Logo Section for all pages-->
+  <section class="section group">
+    <div class="col span_4_of_4">
+      <header>
+        <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
+        <h1>Straight to the Point Archery</h1>
+      </header>
+    </div>
+  </section>
+  <!-- Nav Section for all pages-->
+  <nav class="nav">
+    <ul>
+      <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
+    </ul>
+  </nav>
+
   <section>
     <h2>About</h2>
     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
@@ -28,17 +39,19 @@
     <p>Straight to the Point Archery has an excellent network of contacts with the USA Archery (USAA), Washington State Archery Association (WSAA), Washington State Bow Hunters (WSB), National Field Archery Association (NFAA) and many more national and state archery associations. These partnerships allow you to feel confident in our facility and staff.</p>
     <p>Straight to the Point Archery’s staff has decades of experience in the archery industry. We are committed to educating you with any questions that you may have.</p>
   </section>
+
   <footer>
-        <!-- footer with copyrite info & contact email -->
-        <nav class= "footer-nav">
-          <h4>Contact Us!</h4>
-          <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
-          <!-- Google Map -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-          
-          <h5>&copy;STP Archery 2017. All rights reserved</h5>
-        </nav>
-  </footer>
+    <!-- footer with copyrite info & contact email -->
+    <nav class= "footer-nav">
+      <h4>Contact Us!</h4>
+      <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
+        <!--Google Map-->
+      <div class=mapWrapper>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2680.2364334910108!2d-122.32920748423813!3d47.79625237919771!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54901aa15e85d991%3A0x2b6aa1315a8d11cf!2sThe+Nock+Point!5e0!3m2!1sen!2sus!4v1511898402344" allowfullscreen></iframe>
+      </div>
+      <h5>&copy;STP Archery 2017. All rights reserved</h5>
+    </nav>
+  </footer>>
 
 </body>
 
