update header on all pages

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Home - STP Archery</title>
+  <title>About - STP Archery</title>
   <!-- STP Archery Logo within the header -->
   <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
@@ -30,8 +30,19 @@
     </ul>
   </nav>
 
-  <section>
-    <h2>About</h2>
+ <!-- Banner/About Section page only-->
+  <div class="section group">    
+    <section class="col span_4_of_4 img-about">
+      <div class="intro">    
+        <h2>Straight to the Point Archery</h2>
+        <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+        <p><a href="services.html">Classes and Lessons <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+      </div>
+    </section>
+  </div>
+
+  <section class="section group">
+    <h2>Our Story</h2>
     <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
     <p>Straight to the Point Archery is an indoor training facility with  28 shooting (14 -  10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26  additional  20 yard lanes  and an outdoor shooting field.  We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques</p>
     <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.  Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the youth in our community through the wonderful discipline of archery</p>
