--- a/instructors.html
+++ b/instructors.html
@@ -29,10 +29,22 @@
       <li><a href="instructors.html">Instructors</a></li>
     </ul>
   </nav>
+  
+  <!-- Banner/Instructors Section page only-->
+  <div class="section group">    
+    <section class="col span_4_of_4 img-instructors">
+      <div class="intro">    
+        <h2>Straight to the Point Archery</h2>
+        <p><strong>Straight to the Point Archery</strong> is a non profit archery education center founded in 2005 by Giap Nguyen.  Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors.</p>
+        <p><a href="services.html">Classes and Lessons <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
+      </div>
+    </section>
+  </div>
+  
    <article>
     <h2>Instructors</h2>
 	<hr />
-    
+  
 	<section class="instructors">
       <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins" class="coaches">
       <h3>Derek Jenkins</h3>
