Remove h4 margin and add h4 margin on top

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </section>
   </div>
   <!-- Content/Media Section this page only -->
-  <div class="section group lessons">  
-    <section class="col span_2_of_4">
+  <section class="section group">  
+    <div class="col span_1_of_3 lessons">
       <h2>Classes</h2>
       <p>Learn basic, intermmediate, and advance traning. You will be introduced to proper form, techniques and safety.</p>
       <ul>
@@ -52,18 +52,20 @@
         <li>A103 Advanced</li>
       </ul>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
-    </section>
-    <section class="col span_1_of_4">
+    </div>
+    
+    <div class="col span_1_of_3 lessons">
       <h2>Private Lessons</h2>
       <p>Lessons and guidance provided by expert USA Archery certified coach.</p>
       <p><a href="services.html">Learn more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></p>
-    </section>
-    <aside class="col span_1_of_4">
+    </div>
+   
+    <div class="col span_1_of_3 lessons">
       <h4>Training/Competition Video</h4>
       <iframe width="100%" height="auto" src="https://www.youtube.com/embed/W8CmEvd5Ifc?rel=0&amp;start=34" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
       <p><em>Don't end up like these guys. Get expert training from STP Archery now!</em></p>
-    </aside>
   </div>
+  </section>
   <!-- Policy Note, for all pages -->   
   <div class="section group">  
     <section class="col span_4_of_4 policy">
