--- a/instructors.html
+++ b/instructors.html
@@ -6,6 +6,7 @@
   <!-- STP Archery Logo within the header -->
   <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
+<!--  <link rel="stylesheet" type="text/css" href="styles/meyer-reset.css">-->
   <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
   <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
