updated favicon to transparent background, increase margin around contact us section, removed margin on the instructor.html for h4s

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <section class="section group">
     <div class="col span_4_of_4">
       <header>
-        <a href="index.html"><img src="images/logo.jpg" alt="STP Archery Logo"></a>
+        <a href="index.html"><img src="images/logosm.png" alt="STP Archery Logo"></a>
         <h1>Straight to the Point Archery</h1>
       </header>
     </div>
