--- a/instructors.html
+++ b/instructors.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Instructors - STP Archery</title>
   <!-- STP Archery Logo within the header -->
-  <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon" /> 
+  <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
   <!-- Google Font Cutive for titles and Montserrat or Open Sans for body text -->
   <link href="https://fonts.googleapis.com/css?family=Cutive|Montserrat|Open+Sans" rel="stylesheet">
@@ -46,7 +46,7 @@
       <h2 >Our Experience</h2>
 	   <hr />
      </section>
-	<section class="section group">
+	<section class="section group instructors">
       <div class="col span_1_of_3">
         <img src="images/derek-jenkins-instructor.jpg" alt="Derek Jenkins" class="coaches">
       </div>
@@ -56,7 +56,7 @@
       </div>
     </section>
 	
-    <section class="section group">
+    <section class="section group instructors">
       <div class="col span_1_of_3">
         <img src="images/amy-smith-instructor.jpg" alt="Amy Smith" class="coaches">
       </div>
@@ -66,7 +66,7 @@
       </div>
     </section>
     
-    <section class="section group">
+    <section class="section group instructors">
       <div class="col span_1_of_3">
         <img src="images/nathan-lee-instructor2.jpg" alt="Nathan Lee" class="coaches">
       </div>
@@ -86,7 +86,7 @@
   <footer>
     <!-- footer with copyrite info & contact email -->
     <nav class= "footer-nav">
-      <h4>Contact Us!</h4>
+      <h4 class="contact">Contact Us!</h4>
       <p>528 Nock Point Ln | Tacoma, WA 98412 | Ph: (253) 555-1010 | Email: <a href="mailto:archery-education@example.com" target="_blank"> archery-education@example.com</a> </p>
       <!--Google Map-->
       <div class="mapWrapper">
