--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>About - STP Archery</title>
+  <!-- STP Archery Logo within the header -->
+  <link rel="shortcut icon" href="images/logosm.png" type="image/x-icon" /> 
   <script src="https://use.fontawesome.com/d42c9f5feb.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Cutive" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
